Removes invisible label; no longer needed after Dropdown changes
MIMIR-787

--- a/src/main/resources/assets/styles/_localSearch.scss
+++ b/src/main/resources/assets/styles/_localSearch.scss
@@ -12,10 +12,6 @@
     max-width: none;
     width: 100%;
 
-    label {
-      display: none;
-    }
-
     input {
       height: 80px;
       font-size: 20px;
